--- a/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Web.config
+++ b/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Web.config
@@ -12,7 +12,7 @@
     <add name="cnMysql" providerName="MySql.Data.MySqlClient" connectionString="Data Source=mysql5046.site4now.net;User Id=a66376_dbcdc;Initial Catalog=db_a66376_dbcdc;Password=CasaCambio21." />
   </connectionStrings>
   <appSettings>
-    <add key="RutaLog" value="C:\SoftColegioFrontEnd\" />
+    <add key="RutaLog" value="C:\SistemaVotacionLOG\" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -60,12 +60,6 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
