sistema votacion avance

--- a/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Web.config
+++ b/WebSistemaVotacion/SistemaVotacionWEB/WebSistemaVotacion/Web.config
@@ -9,7 +9,7 @@
     <!--<add name="cnMysql" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;User Id=root;Initial Catalog=bdschool;Password=" />-->
 
     <!-- SMARTERASP -->
-    <add name="cnMysql" providerName="MySql.Data.MySqlClient" connectionString="Data Source=mysql5046.site4now.net;User Id=a66376_dbcdc;Initial Catalog=db_a66376_dbcdc;Password=CasaCambio21." />
+    <add name="cnMysql" providerName="MySql.Data.MySqlClient" connectionString="Data Source=mysql5042.site4now.net;User Id=a66376_sv;Initial Catalog=db_a66376_sv;Password=@SisVot2021." />
   </connectionStrings>
   <appSettings>
     <add key="RutaLog" value="C:\SistemaVotacionLOG\" />
